@@ -4,19 +4,19 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -32,12 +32,12 @@ import RTi.Util.Time.DateTime;
 
 /**
 Compute an ensemble with time series that each contain a statistic computed from the input sample time series.
-This is intended to compute multiple output time series, for example CountLE(A), CountLE(B), etc.  Computing a "simple"
-statistic from an ensemble can be done using the TSUtil_NewStatisticTimeSeriesFromEnsemble class.
+This is intended to compute multiple output time series, for example CountLE(A), CountLE(B), etc.
+Computing a "simple" statistic from an ensemble can be done using the TSUtil_NewStatisticTimeSeriesFromEnsemble class.
 */
 public class TSUtil_NewStatisticEnsemble
 {
-    
+
 /**
 Enumerations used when processing the statistic.
 */
@@ -46,8 +46,8 @@ private enum TestType {
     GT, // Test >
     LE, // Test <=
     LT, // Test <
-    NOT_USED }; // Unknown test
-    
+    NOT_USED }; // Unknown test.
+
 /**
 List of time series to analyze.
 */
@@ -64,7 +64,7 @@ New ensemble name.
 private String __newEnsembleName = null;
 
 /**
-Alias for new time series.
+Alias for new ensemble.
 */
 private String __alias = null;
 
@@ -121,18 +121,18 @@ Execute the newStatisticYearTS() method to perform the analysis.
 public TSUtil_NewStatisticEnsemble ( List<TS> tslist, String newEnsembleID, String newEnsembleName,
     String alias, String newTSID, TSStatisticType statisticType, double [] testValues,
     Integer allowMissingCount, Integer minimumSampleSize,
-    DateTime analysisStart, DateTime analysisEnd )
-{   String routine = getClass().getName();
+    DateTime analysisStart, DateTime analysisEnd ) {
+    String routine = getClass().getSimpleName();
     String message;
 
     if ( tslist == null ) {
-        // Nothing to do...
+        // Nothing to do.
         message = "Time series list is null - cannot calculate statistic ensemble.";
         Message.printWarning ( 3, routine, message );
         throw new IllegalArgumentException ( message );
     }
     else if ( tslist.size() == 0 ) {
-        // Nothing to do...
+        // Nothing to do.
         message = "Time series list is empty - cannot calculate statistic ensemble.";
         Message.printWarning ( 3, routine, message );
         throw new IllegalArgumentException ( message );
@@ -143,7 +143,7 @@ public TSUtil_NewStatisticEnsemble ( List<TS> tslist, String newEnsembleID, Stri
     setAlias ( alias );
     setNewTSID ( newTSID );
     try {
-        // TODO SAM 
+        // TODO SAM.
     }
     catch ( Exception e ) {
         throw new IllegalArgumentException (
@@ -152,18 +152,18 @@ public TSUtil_NewStatisticEnsemble ( List<TS> tslist, String newEnsembleID, Stri
     setStatisticType ( statisticType );
     setTestValues ( testValues );
     if ( allowMissingCount == null ) {
-        allowMissingCount = new Integer(-1); // default
+        allowMissingCount = Integer.valueOf(-1); // Default.
     }
     setAllowMissingCount ( allowMissingCount.intValue() );
     if ( minimumSampleSize == null ) {
-        minimumSampleSize = new Integer(-1); // default
+        minimumSampleSize = Integer.valueOf(-1); // Default.
     }
     setMinimumSampleSize ( minimumSampleSize );
-    
+
     setAnalysisStart ( analysisStart );
     setAnalysisEnd ( analysisEnd );
-    
-    // FIXME SAM 2009-11-04 Need to make this check specific to the time series interval and time scale
+
+    // FIXME SAM 2009-11-04 Need to make this check specific to the time series interval and time scale.
     if ( !isStatisticSupported(statisticType) ) {
         throw new IllegalArgumentException ( "Statistic \"" + statisticType + "\" is not supported.");
     }
@@ -177,8 +177,7 @@ Calculate the number of values in the sample that meet the statistic criteria
 @param testType the type of test when comparing a sample value and test value
 @return the count of sample values that meet the statistic criteria
 */
-private int calculateCount ( int countNonMissing, double [] sampleData, double testValue, TestType testType )
-{
+private int calculateCount ( int countNonMissing, double [] sampleData, double testValue, TestType testType ) {
     int count = 0;
     for ( int i = 0; i < countNonMissing; i++ ) {
         if ( (testType == TestType.GE) && (sampleData[i] >= testValue) ) {
@@ -210,25 +209,25 @@ Process a list of input time series to create output statistic time series.
 */
 private void calculateStatistic (
     List<TS> tslist, List<TS> stattsList, TSStatisticType statisticType, double [] testValues,
-    DateTime analysisStart, DateTime analysisEnd, int allowMissingCount, int minimumSampleSize )
-{   String routine = getClass().getName() + ".calculateStatistic";
+    DateTime analysisStart, DateTime analysisEnd, int allowMissingCount, int minimumSampleSize ) {
+    String routine = getClass().getSimpleName() + ".calculateStatistic";
     int size = tslist.size();
     Message.printStatus(2,routine,"Have " + size + " time series to analyze.");
-    TS ts; // Time series in the ensemble
-    // To improve performance, initialize an array of time series...
+    TS ts; // Time series in the ensemble.
+    // To improve performance, initialize an array of time series.
     TS [] ts_array = tslist.toArray(new TS[tslist.size()]);
     if ( ts_array.length == 0 ) {
         throw new RuntimeException ( "Ensemble has 0 traces - cannot analyze statistic.");
     }
     DateTime date = new DateTime(analysisStart);
     int i; // Index for time series in loop.
-    double value; // Value from the input time series
-    double [] sampleData = new double[size]; // One value from each ensemble
-    int countNonMissing; // Count of sampleData that are non-missing
-    int countMissing; // Count of sampleData that are missing
+    double value; // Value from the input time series.
+    double [] sampleData = new double[size]; // One value from each ensemble.
+    int countNonMissing; // Count of sampleData that are non-missing.
+    int countMissing; // Count of sampleData that are missing.
     Message.printStatus(2, routine, "Analyzing time series list for period " + analysisStart + " to " +
         analysisEnd );
-    // Loop through the analysis period
+    // Loop through the analysis period.
     int intervalBase = ts_array[0].getDataIntervalBase();
     int intervalMult = ts_array[0].getDataIntervalMult();
     int statCount;
@@ -236,23 +235,23 @@ private void calculateStatistic (
     boolean statisticIsPercent = isStatisticPercent(statisticType);
     TestType testType = getStatisticTestType(statisticType);
     for ( ; date.lessThanOrEqualTo(analysisEnd); date.addInterval(intervalBase, intervalMult) ) {
-        // Loop through the time series for the date/time...
+        // Loop through the time series for the date/time.
         countNonMissing = 0;
         countMissing = 0;
         for ( i = 0; i < size; i++ ) {
             ts = ts_array[i];
             value = ts.getDataValue(date);
             if ( ts.isDataMissing(value) ) {
-                // Ignore missing data...
+                // Ignore missing data.
                 ++countMissing;
                 continue;
             }
             else {
-                // Save non-missing value in the sample...
+                // Save non-missing value in the sample.
                 sampleData[countNonMissing++] = value;
             }
         }
-        // Now analyze the statistic for each output time series
+        // Now analyze the statistic for each output time series.
         TS statts;
         for ( i = 0; i < testValues.length; i++ ) {
             statts = stattsList.get(i);
@@ -264,7 +263,7 @@ private void calculateStatistic (
                 continue;
             }
             if ( (minimumSampleSize >= 0) && (countNonMissing < minimumSampleSize) ) {
-                // Sample size too small to compute statistic
+                // Sample size too small to compute statistic.
                 Message.printStatus ( 2, routine, "Not computing time series statistic at " + date +
                     " because sample size " + countNonMissing + " is < minimum required (" + minimumSampleSize + ").");
                 continue;
@@ -275,7 +274,7 @@ private void calculateStatistic (
                 statts.setDataValue ( date, (double)statCount );
             }
             else if ( statisticIsPercent && (countNonMissing > 0) ) {
-                // Default is percent of non-missing stations
+                // Default is percent of non-missing stations.
                 // TODO SAM 2012-07-13 Evaluate whether should be percent of total stations?
                 statts.setDataValue ( date, 100.0*(double)statCount/(double)countNonMissing );
             }
@@ -287,8 +286,7 @@ private void calculateStatistic (
 Return the alias for new time series.
 @return the alias for new time series.
 */
-private String getAlias ()
-{
+public String getAlias () {
     return __alias;
 }
 
@@ -296,8 +294,7 @@ private String getAlias ()
 Return the number of missing values allowed in sample.
 @return the number of missing values allowed in sample.
 */
-private Integer getAllowMissingCount ()
-{
+private Integer getAllowMissingCount () {
     return __allowMissingCount;
 }
 
@@ -305,8 +302,7 @@ private Integer getAllowMissingCount ()
 Return the analysis end date/time.
 @return the analysis end date/time.
 */
-private DateTime getAnalysisEnd ()
-{
+private DateTime getAnalysisEnd () {
     return __analysisEnd;
 }
 
@@ -314,8 +310,7 @@ private DateTime getAnalysisEnd ()
 Return the analysis start date/time.
 @return the analysis start date/time.
 */
-private DateTime getAnalysisStart ()
-{
+private DateTime getAnalysisStart () {
     return __analysisStart;
 }
 
@@ -323,8 +318,7 @@ private DateTime getAnalysisStart ()
 Return the minimum sample size allowed to compute the statistic.
 @return the minimum sample size allowed to compute the statistic.
 */
-private Integer getMinimumSampleSize ()
-{
+private Integer getMinimumSampleSize () {
     return __minimumSampleSize;
 }
 
@@ -332,8 +326,7 @@ private Integer getMinimumSampleSize ()
 Return the new ensemble identifier
 @return the new ensemble identifier
 */
-private String getNewEnsembleID ()
-{
+private String getNewEnsembleID () {
     return __newEnsembleID;
 }
 
@@ -341,8 +334,7 @@ private String getNewEnsembleID ()
 Return the new ensemble name
 @return the new ensemble name
 */
-private String getNewEnsembleName ()
-{
+private String getNewEnsembleName () {
     return __newEnsembleName;
 }
 
@@ -350,8 +342,7 @@ private String getNewEnsembleName ()
 Return the time series identifier for the new time series.
 @return the time series identifier for the new time series.
 */
-private String getNewTSID ()
-{
+private String getNewTSID () {
     return __newTSID;
 }
 
@@ -360,9 +351,9 @@ Return a list of statistic choices.
 These strings are suitable for listing in a user interface.  The statistics are
 listed in ascending alphabetical order.
 */
-public static List<TSStatisticType> getStatisticChoices ()
-{   List<TSStatisticType> statistics = new ArrayList<TSStatisticType>();
-    // Add in alphabetical order
+public static List<TSStatisticType> getStatisticChoices () {
+    List<TSStatisticType> statistics = new ArrayList<>();
+    // Add in alphabetical order.
     statistics.add ( TSStatisticType.GE_COUNT );
     statistics.add ( TSStatisticType.GE_PERCENT );
     statistics.add ( TSStatisticType.GT_COUNT );
@@ -380,10 +371,9 @@ Return a list of statistic choices.
 These strings are suitable for listing in a user interface.  The statistics are
 listed in ascending alphabetical order.
 */
-public static List<String> getStatisticChoicesAsStrings ()
-{
+public static List<String> getStatisticChoicesAsStrings () {
     List<TSStatisticType> choices = getStatisticChoices();
-    List<String> stringChoices = new ArrayList<String>();
+    List<String> stringChoices = new ArrayList<>();
     for ( int i = 0; i < choices.size(); i++ ) {
         stringChoices.add ( "" + choices.get(i) );
     }
@@ -395,8 +385,7 @@ Determine the statistic test type, when comparing against a test value.
 @param statisticType a statistic type to check.
 @return the test type for the statistic or NOT_USED if the test is not used for a statistic.
 */
-private TestType getStatisticTestType ( TSStatisticType statisticType )
-{
+private TestType getStatisticTestType ( TSStatisticType statisticType ) {
     if ( (statisticType == TSStatisticType.GE_COUNT) ||
         (statisticType == TSStatisticType.GE_PERCENT) ) {
         return TestType.GE;
@@ -423,8 +412,7 @@ Determine the statistic time series data units.
 @param statisticType a statistic type to check.
 @return the data units for the time series, given the statistic.
 */
-private String getStatisticTimeSeriesDataUnits ( TSStatisticType statisticType )
-{
+private String getStatisticTimeSeriesDataUnits ( TSStatisticType statisticType ) {
     if ( isStatisticPercent(statisticType) ) {
         return "Percent";
     }
@@ -443,9 +431,8 @@ Determine the statistic time series description.
 @param statisticIsPercent if true, the statistic is a percent
 @return the description for the time series, given the statistic and test types.
 */
-private String getStatisticTimeSeriesDescription ( TSStatisticType statisticType, TestType testType,
-    Double testValue )
-{   String testString = "?test?";
+private String getStatisticTimeSeriesDescription ( TSStatisticType statisticType, TestType testType, Double testValue ) {
+    String testString = "?test?";
     String testValueString = "?testValue?";
     String desc = "?";
     if ( testValue != null ) {
@@ -491,7 +478,7 @@ private String getStatisticTimeSeriesDescription ( TSStatisticType statisticType
         // MAX, MEAN, etc.
         desc = "" + statisticType;
     }
-    // If not set will fall through to default
+    // If not set will fall through to default.
     return desc;
 }
 
@@ -499,8 +486,7 @@ private String getStatisticTimeSeriesDescription ( TSStatisticType statisticType
 Return the name of the statistic being calculated.
 @return the name of the statistic being calculated.
 */
-public TSStatisticType getStatisticType ()
-{
+public TSStatisticType getStatisticType () {
     return __statisticType;
 }
 
@@ -508,8 +494,7 @@ public TSStatisticType getStatisticType ()
 Return the test values used to calculate some statistics.
 @return the test values used to calculate some statistics.
 */
-private double [] getTestValues ()
-{
+private double [] getTestValues () {
     return __testValues;
 }
 
@@ -517,8 +502,7 @@ private double [] getTestValues ()
 Return the list of time series being analyzed.
 @return the list of time series being analyzed.
 */
-public List<TS> getTimeSeriesList ()
-{
+public List<TS> getTimeSeriesList () {
     return __tslist;
 }
 
@@ -526,8 +510,7 @@ public List<TS> getTimeSeriesList ()
 Indicate whether the statistic is a count.
 @param statisticType a statistic type to check.
 */
-private boolean isStatisticCount ( TSStatisticType statisticType )
-{
+private boolean isStatisticCount ( TSStatisticType statisticType ) {
     if ( (statisticType == TSStatisticType.GE_COUNT) ||
         (statisticType == TSStatisticType.GT_COUNT) ||
         (statisticType == TSStatisticType.LE_COUNT) ||
@@ -543,8 +526,7 @@ private boolean isStatisticCount ( TSStatisticType statisticType )
 Indicate whether the statistic is a percent.
 @param statisticType a statistic type to check.
 */
-private boolean isStatisticPercent ( TSStatisticType statisticType )
-{
+private boolean isStatisticPercent ( TSStatisticType statisticType ) {
     if ( (statisticType == TSStatisticType.GE_PERCENT) ||
         (statisticType == TSStatisticType.GT_PERCENT) ||
         (statisticType == TSStatisticType.LE_PERCENT) ||
@@ -562,8 +544,7 @@ Indicate whether a statistic is supported.
 @param interval time interval base to check, or TimeInterval.UNKNOWN if interval is not to be considered.
 @param timeScale time scale to check, or null if not considered.
 */
-public static boolean isStatisticSupported ( TSStatisticType statisticType )
-{
+public static boolean isStatisticSupported ( TSStatisticType statisticType ) {
     List<TSStatisticType> choices = getStatisticChoices ();
     for ( int i = 0; i < choices.size(); i++ ) {
         if ( choices.get(i) == statisticType ) {
@@ -577,8 +558,7 @@ public static boolean isStatisticSupported ( TSStatisticType statisticType )
 Indicate whether the statistic requires that a test value be supplied.
 @param statisticType a statistic type to check.
 */
-public static boolean isTestValueNeeded ( TSStatisticType statisticType )
-{
+public static boolean isTestValueNeeded ( TSStatisticType statisticType ) {
     if ((statisticType == TSStatisticType.GE_COUNT) ||
         (statisticType == TSStatisticType.GE_PERCENT) ||
         (statisticType == TSStatisticType.GT_COUNT) ||
@@ -600,12 +580,12 @@ percent greater than a threshold value).
 @param createData if true, calculate the data value array; if false, only assign metadata
 @return the statistics ensemble
 */
-public TSEnsemble newStatisticEnsemble ( boolean createData )
-{   String routine = getClass().getName() + ".newStatisticEnsemble";
+public TSEnsemble newStatisticEnsemble ( boolean createData ) {
+    String routine = getClass().getSimpleName() + ".newStatisticEnsemble";
     int dl = 10;
 
-    // Get the data needed for the analysis - originally provided in the constructor
-    
+    // Get the data needed for the analysis - originally provided in the constructor.
+
     List<TS> tslist = getTimeSeriesList();
     String newEnsembleID = getNewEnsembleID();
     String newEnsembleName = getNewEnsembleName();
@@ -616,7 +596,7 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
     Integer minimumSampleSize = getMinimumSampleSize();
     DateTime analysisStart = getAnalysisStart();
     DateTime analysisEnd = getAnalysisEnd();
-    
+
     if ( Message.isDebugOn ) {
         Message.printDebug ( dl, routine, "Trying to create statistic ensemble for " + tslist.size() +
         " input time series." );
@@ -626,12 +606,12 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
     // Use the overlapping period of all the time series
 
     if ( (analysisStart != null) && (analysisEnd != null) ) {
-        // Create a local copy to protect from passed parameters
+        // Create a local copy to protect from passed parameters.
         analysisStart = new DateTime ( analysisStart );
         analysisEnd = new DateTime ( analysisEnd );
     }
     else {
-        // Get the analysis start and end from the overall period
+        // Get the analysis start and end from the overall period.
         TSLimits validDates = null;
         try {
             validDates = TSUtil.getPeriodFromTS( tslist, TSUtil.MAX_POR );
@@ -643,12 +623,12 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
         analysisEnd = new DateTime ( validDates.getDate2() );
     }
 
-    // Create a statistic time series for each value being processed
-    // Also create an ensemble and add the individual time series to the ensemble, if requested
+    // Create a statistic time series for each value being processed.
+    // Also create an ensemble and add the individual time series to the ensemble, if requested.
 
     List<TS> stattsList = new ArrayList<TS>();
     for ( int i = 0; i < testValues.length; i++ ) {
-        // Create the time series identifier using the newTSID, but may need to expand for the statistic
+        // Create the time series identifier using the newTSID, but may need to expand for the statistic.
         String tsid = newTSID;
         TS statts = null;
         try {
@@ -660,7 +640,7 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
                 tsid + "\" (" + e + ")." );
         }
         statts.addToGenesis ( "Initialized statistic time series using TSID=\"" + statts.getIdentifierString() + "\"" );
-        // Set the period to that determined above
+        // Set the period to that determined above.
         statts.setDate1 ( analysisStart );
         statts.setDate1Original ( analysisStart );
         statts.setDate2 ( analysisEnd );
@@ -668,17 +648,17 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
         if ( createData ) {
             statts.allocateDataSpace();
         }
-        // Set the units and description based on the statistic
+        // Set the units and description based on the statistic.
         statts.setDataUnits ( getStatisticTimeSeriesDataUnits(statisticType) );
         statts.setDataUnitsOriginal ( statts.getDataUnits() );
         statts.setDescription( getStatisticTimeSeriesDescription(statisticType,
             getStatisticTestType(statisticType), testValues[i]));
         stattsList.add ( statts );
     }
-    
+
     // Always create an ensemble even if the ID is empty.  Calling code can ignore the ensemble and use the
     // list of time series directly if needed.
-    
+
     TSEnsemble ensemble = null;
     if ( newEnsembleID == null ) {
         newEnsembleID = "";
@@ -687,12 +667,12 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
         newEnsembleName = "";
     }
     ensemble = new TSEnsemble(newEnsembleID, newEnsembleName, stattsList);
-    
+
     if ( !createData ) {
         return ensemble;
     }
 
-    // Calculate the statistic time series...
+    // Calculate the statistic time series.
     calculateStatistic (
             tslist, stattsList, statisticType, testValues,
             analysisStart, analysisEnd, allowMissingCount, minimumSampleSize );
@@ -704,8 +684,7 @@ public TSEnsemble newStatisticEnsemble ( boolean createData )
 Set the alias for new time series.
 @param alias the alias for new time series
 */
-private void setAlias ( String alias )
-{
+private void setAlias ( String alias ) {
     __alias = alias;
 }
 
@@ -713,8 +692,7 @@ private void setAlias ( String alias )
 Set the number of values allowed to be missing in the sample.
 @param allowMissingCount the number of values allowed to be missing in the sample.
 */
-private void setAllowMissingCount ( int allowMissingCount )
-{
+private void setAllowMissingCount ( int allowMissingCount ) {
     __allowMissingCount = allowMissingCount;
 }
 
@@ -722,8 +700,7 @@ private void setAllowMissingCount ( int allowMissingCount )
 Set the end for the analysis.
 @param analysisEnd end date/time for the analysis.
 */
-private void setAnalysisEnd ( DateTime analysisEnd )
-{
+private void setAnalysisEnd ( DateTime analysisEnd ) {
     __analysisEnd = analysisEnd;
 }
 
@@ -731,8 +708,7 @@ private void setAnalysisEnd ( DateTime analysisEnd )
 Set the start for the analysis.
 @param analysisStart start date/time for the analysis.
 */
-private void setAnalysisStart ( DateTime analysisStart )
-{
+private void setAnalysisStart ( DateTime analysisStart ) {
     __analysisStart = analysisStart;
 }
 
@@ -740,8 +716,7 @@ private void setAnalysisStart ( DateTime analysisStart )
 Set the minimum sample size.
 @param minimumSampleSize the minimum sample size.
 */
-private void setMinimumSampleSize ( int minimumSampleSize )
-{
+private void setMinimumSampleSize ( int minimumSampleSize ) {
     __minimumSampleSize = minimumSampleSize;
 }
 
@@ -749,8 +724,7 @@ private void setMinimumSampleSize ( int minimumSampleSize )
 Set the new ensemble identifier.
 @param newEnsembleID the new ensemble identifier.
 */
-private void setNewEnsembleID ( String newEnsembleID )
-{
+private void setNewEnsembleID ( String newEnsembleID ) {
     __newEnsembleID = newEnsembleID;
 }
 
@@ -758,8 +732,7 @@ private void setNewEnsembleID ( String newEnsembleID )
 Set the new ensemble name.
 @param newEnsembleName the new ensemble name.
 */
-private void setNewEnsembleName ( String newEnsembleName )
-{
+private void setNewEnsembleName ( String newEnsembleName ) {
     __newEnsembleName = newEnsembleName;
 }
 
@@ -767,8 +740,7 @@ private void setNewEnsembleName ( String newEnsembleName )
 Set the new time series identifier.
 @param newTSID the new time series identifier.
 */
-private void setNewTSID ( String newTSID )
-{
+private void setNewTSID ( String newTSID ) {
     __newTSID = newTSID;
 }
 
@@ -776,8 +748,7 @@ private void setNewTSID ( String newTSID )
 Set the statistic type.
 @param statisticType statistic type to calculate.
 */
-private void setStatisticType ( TSStatisticType statisticType )
-{
+private void setStatisticType ( TSStatisticType statisticType ) {
     __statisticType = statisticType;
 }
 
@@ -785,8 +756,7 @@ private void setStatisticType ( TSStatisticType statisticType )
 Set the test values used for statistics.
 @param testValue the test values used with statistics.
 */
-private void setTestValues ( double [] testValues )
-{
+private void setTestValues ( double [] testValues ) {
     __testValues = testValues;
 }
 
@@ -794,8 +764,7 @@ private void setTestValues ( double [] testValues )
 Set the time series list being analyzed.
 @param ts time series list being analyzed.
 */
-private void setTimeSeriesList ( List<TS> tslist )
-{
+private void setTimeSeriesList ( List<TS> tslist ) {
     __tslist = tslist;
 }
 
