@@ -4,19 +4,19 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -245,7 +245,7 @@ public void timeSeriesToTable ()
                     }
                     else {
                         // Set as a double because non-missing or missing and the missing value should be used
-                        __table.setFieldValue(setRow, valueColumn, new Double(value), true );
+                        __table.setFieldValue(setRow, valueColumn, Double.valueOf(value), true );
                     }
                 }
                 catch ( Exception e ) {
@@ -505,7 +505,7 @@ public void timeSeriesToTable ()
                         }
                         else {
                             // Set as a double because non-missing or missing and the missing value should be used
-                            __table.setFieldValue(setRow, setColumn, new Double(value), true );
+                            __table.setFieldValue(setRow, setColumn, Double.valueOf(value), true );
                             if ( Message.isDebugOn ) {
                                 Message.printDebug(1,routine,"Set [" + setRow + "][" + setColumn + "]=" + value );
                             }
