@@ -4,26 +4,24 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
 
 package RTi.Util.Math;
-
-import org.apache.commons.math3.distribution.TDistribution;
 
 import RTi.Util.Message.Message;
 
@@ -92,15 +90,6 @@ public RegressionEstimateErrors ( RegressionData data, RegressionResults results
     setStandardErrorOfEstimate(see);
     setStandardErrorOfSlope(seSlope);
 }
-
-/**
-Finalize before garbage collection.
-@exception Throwable if an error occurs.
-*//*
-protected void finalize()
-throws Throwable {
-	super.finalize();
-}*/
 
 /**
 Return the mean for the estimated dependent array, or null if not analyzed.
@@ -288,7 +277,7 @@ public Double getTestScore ( Double b )
     if ( SESlope == 0.0 ) {
         return Double.POSITIVE_INFINITY;
     }
-    return new Double(b/SESlope);
+    return Double.valueOf(b/SESlope);
 }
 
 /**
