@@ -4,34 +4,22 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-//------------------------------------------------------------------------------
-// MessageLogJPanel - a GUI for displaying message log text 
-// 	in order to quickly summarize and move through the log file.
-//------------------------------------------------------------------------------
-// Copyright:	See the COPYRIGHT file.
-//------------------------------------------------------------------------------
-// History:
-// 2005-05-26	J. Thomas Sapienza, RTi	Initial version from code in 
-//					MessageLogJDialog.
-// 2007-05-08	SAM, RTi		Cleanup code based on Eclipse feedback.
-//------------------------------------------------------------------------------
 
 package RTi.Util.Message;
 
@@ -804,11 +792,11 @@ private void processWarningLine(String line, int pos) {
 	}
 
 	__messageVector.add(line);
-	__posVector.add(new Integer(pos));
+	__posVector.add(Integer.valueOf(pos));
 	// Initially, the filtered position vector must contain the same 
 	// information as the unfiltered.
 	if (StringUtil.atoi(num) <= (__INITIAL_END_RANGE_VALUE)) {
-		__filteredPosVector.add(new Integer(pos));
+		__filteredPosVector.add(Integer.valueOf(pos));
 	}
 }
 
